project(complexwalletmgr
  LANGUAGES CXX
  VERSION 0.0.1
)
cmake_minimum_required(VERSION 4.3)


add_executable(complexwalletmgr tools/complexwalletmgr.cpp)

include(FetchContent)
FetchContent_Declare(ftxui
  GIT_REPOSITORY https://github.com/ArthurSonzogni/ftxui
  GIT_TAG v7.0.0
)
FetchContent_MakeAvailable(ftxui)

target_link_libraries(complexwalletmgr PRIVATE
    ftxui::ftxui
)

target_sources(complexwalletmgr
  PRIVATE
    tools/complexwalletmgr.cpp
)
